--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:linux
+FROM alpine:latest
 
 RUN apk update \
 	&& apk add nginx \
@@ -6,6 +6,14 @@ RUN apk update \
 	&& apk add openssh
 
 COPY default.conf etc/nginx/conf.d/default.conf
+COPY index.html /var/www/localhost/htdocs/index.html
 
-RUN openssl req -x509 -nodes -newkey rsa:4096 -keyout etc/ssl/certs/services.key -out etc/ssl/certs/services.crt -days 365
+#creer securite ssl et cle ssh
+RUN openssl req -x509 -nodes -days 365 -newkey -subj '/CN=FR' rsa:4096 -keyout etc/ssl/certs/nginx_services.key -out etc/ssl/certs/nginx_services.crt
 RUN ssh-keygen -A
+
+#creer un nouvel user
+RUN start.sh
+
+#ports necessaire pour nginx
+EXPOSE 80 443 22
