--- a/srcs/ftps/Dockerfile
+++ b/srcs/ftps/Dockerfile
@@ -1,18 +1,26 @@
 FROM alpine:latest
 
-RUN apk update \
-	&& apk add vsftpd \
-	&& apk add openssl \
-	&& apk add telegraf --repository http://dl-cdn.alpinelinux.org/alpine/edge/testing/ --allow-untrusted --no-cache
+COPY start.sh ./
+COPY telegraf.conf ./
 
-RUN mkdir -p etc/nginx/ssl \
-	&& mkdir -p etc/telegraf \
-	&& openssl req -x509 -nodes -days 365 -newkey rsa:4096 -keyout etc/ssl/certs/vsftpd.key -out etc/ssl/certs/vsftpd.crt -subj '/CN=FR'
+RUN apk update && \
+	apk -U upgrade
+
+RUN apk add vsftpd openssl
+
+RUN	apk add --no-cache telegraf && \
+	mkdir -p /etc/telegraf && \
+	mv telegraf.conf /etc/telegraf/telegraf.conf
+
+RUN adduser -D "admin" && \
+	echo "admin:admin" | chpasswd && \
+	openssl req -x509 -nodes -days 365 -newkey rsa:4096 -keyout etc/ssl/private/vsftpd.key -out etc/ssl/certs/vsftpd.crt -subj '/CN=FR'
 
 COPY vsftpd.conf etc/vsftpd/vsftpd.conf
-COPY telegraf.conf etc/telegraf/telegraf.conf
 COPY start.sh ./
 
-EXPOSE 21
+RUN set -ex && apk --no-cache add sudo
 
-CMD sh start.sh
+EXPOSE 21 30000
+
+CMD sudo sh start.sh
