--- a/srcs/influxdb/Dockerfile
+++ b/srcs/influxdb/Dockerfile
@@ -1,14 +1,17 @@
 FROM alpine:latest
 
-RUN apk update \
-	&& apk add influxdb \
-	&& apk add telegraf --repository http://dl-cdn.alpinelinux.org/alpine/edge/testing/ --allow-untrusted --no-cache
-
-RUN mkdir -p etc/telegraf/
-COPY telegraf.conf etc/telegraf/telegraf.conf
-
 COPY start.sh ./
+COPY telegraf.conf ./
+
+RUN apk update && \
+	apk -U upgrade
+
+RUN	apk add --no-cache telegraf && \
+	mkdir -p /etc/telegraf && \
+	mv telegraf.conf /etc/telegraf/telegraf.conf
+
+RUN apk add --no-cache influxdb
 
 EXPOSE 8086
 
-ENTRYPOINT sh start.sh
+CMD sh start.sh
