--- a/srcs/mysql/my.cnf
+++ b/srcs/mysql/my.cnf
@@ -1,22 +1,9 @@
-# This group is read both both by the client and the server
-# use it for options that affect everything
-# [client-server]
-
-# This group is read by the server
 [mysqld]
-user = root
+# Basic Settings
+user = mysql
 port = 3306
-socket=/var/lib/mysql/mysql.sock
 datadir = /var/lib/mysql
+
+log-bin = /var/lib/mysql/mysql-bin
 bind-address = 0.0.0.0
-[mysql]
-user = root
-password = root
-port = 3306
-socket=/var/lib/mysql/mysql.sock
-
-# Disabling symbolic-links is recommended to prevent assorted security risks
-# symbolic-links=0
-
-# include all files from the config directory
-# !includedir /etc/my.cnf.d
+skip-networking = false
