--- a/srcs/services/nginx.yaml
+++ b/srcs/services/nginx.yaml
@@ -4,20 +4,18 @@ metadata:
   name: nginx
   labels:
     app: nginx
+  annotations:
+    metallb.universe.tf/allow-shared-ip: test
 spec:
   type: LoadBalancer
   selector:
     app: nginx
   ports:
-  - port: 80
+  - name: http
+    port: 80
     targetPort: 80
-    name: http
     protocol: TCP
-  - port: 443
+  - name: https
+    port: 443
     targetPort: 443
-    name: https
-    protocol: TCP
-  - port: 22
-    targetPort: 22
-    name: ssh
     protocol: TCP
