--- a/srcs/services/phpmyadmin.yaml
+++ b/srcs/services/phpmyadmin.yaml
@@ -4,12 +4,14 @@ metadata:
   name: phpmyadmin
   labels:
     app: phpmyadmin
+  annotations:
+    metallb.universe.tf/allow-shared-ip: test
 spec:
   type: LoadBalancer
   selector:
     app: phpmyadmin
   ports:
-  - port: 5000
+  - name: http
+    port: 5000
     targetPort: 5000
     protocol: TCP
-    name: phpmyadmin
