--- a/srcs/services/wordpress.yaml
+++ b/srcs/services/wordpress.yaml
@@ -4,12 +4,14 @@ metadata:
   name: wordpress
   labels:
     app: wordpress
+  annotations:
+    metallb.universe.tf/allow-shared-ip: test
 spec:
   type: LoadBalancer
   selector:
     app: wordpress
   ports:
-  - port: 5050
+  - name: http
+    port: 5050
     targetPort: 5050
     protocol: TCP
-    name: wordpress
